<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        android:hint="@string/introText"
        android:text="@string/introText"
        android:textColor="#03A9F4"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="#F44336"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="274dp"
        android:layout_height="140dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="382dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:hint="@string/result"
        android:textColorHighlight="@color/teal_200"
        android:textColorHint="#F44336"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calibrateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginBottom="256dp"
        android:hint="@string/calibrateButton"
        android:onClick="onClickCalibrate"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/option"
        android:layout_width="142dp"
        android:layout_height="150dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/rButtonA"
            android:textColorHint="#000000" />

        <RadioButton
            android:id="@+id/rButtonG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/rButtonG"
            android:textColorHint="#000000" />

        <RadioButton
            android:id="@+id/rButtonBAG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/rButtonBAG"
            android:textColorHint="#090000" />
    </RadioGroup>

    <Button
        android:id="@+id/plotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/plotButton"
        android:onClick="onClickPlot"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>